package com.example.booksapp.ui

object MainTestTag {
    const val SignInScreenContent = "SignInScreenContent"
    const val LibraryScreenContent = "LibraryScreenContent"
    const val SearchScreenContent = "SearchScreenContent"
    const val BookmarksScreenContent= "BookmarksScreenContent"

    const val BookDetailScreenContent = "BookDetailScreenContent"
    const val ChapterScreenContent = "ChapterScreenContent"
    const val MainScreenFAB = "MainScreenFAB"
    const val CustomBottomBar = "CustomBottomBar"
    const val BottomBarItem = "BottomBarItem_"
}