package com.example.booksapp.ui

object SignInTestTags {
    const val SignInButtonTestTag = "SignInButtonTestTag"
    const val SignInButtonTextTestTag = "SignInButtonTextTestTag"
    const val SignInTextTestTag = "SignInTextTestTag"
    const val SignInEmailTestTag = "SignInEmailTestTag"
    const val SignInPasswordTestTag = "SignInPasswordTestTag"
}